# maintenance

./: .gitignore  .guix-authorizations  .guix-channel  AUTHORS  ChangeLog  HACKING  Makefile.am  NEWS  README.org  configure.ac  guix.scm  hall.scm
.github/workflows/: test.yml
.guix/: asahi-guix-maintenance-package.scm  manifest.scm
.guix/modules/: asahi-guix-maintenance-package.scm  asahi-maintenance-package.scm  guile-package.scm
asahi-guix-maintenance/: hconfig.scm
asahi/guix/maintenance/: channels.scm  hconfig.scm  manifest.scm
asahi/guix/maintenance/machines/: server.scm
asahi/guix/maintenance/systems/: server.scm
doc/: NOTES.org  asahi-guix-maintenance.texi  version.texi
modules/asahi/guix/maintenance/: channels.scm  hconfig.scm
modules/asahi/guix/maintenance/files/authorized-keys/: precision.pub
modules/asahi/guix/maintenance/machines/: server.scm
modules/asahi/guix/maintenance/patches/: cuirass-default-jobset.patch
modules/asahi/guix/maintenance/services/: admin.scm  avahi.scm  base.scm  bees.scm  certbot.scm  cuirass.scm  databases.scm  mcron.scm  networking.scm  security.scm  ssh.scm  virtualization.scm  web.scm  website.scm
modules/asahi/guix/maintenance/systems/: server.scm
modules/guix/scripts/: asahi.scm
scripts/: deploy  reconfigure-server
src/asahi/guix/maintenance/: channels.scm  manifest.scm
src/asahi/guix/maintenance/systems/: server.scm
